RESOLVED FIXED48668
Web Inspector: last active panel is not restored upon opening inspector.
https://bugs.webkit.org/show_bug.cgi?id=48668
Summary Web Inspector: last active panel is not restored upon opening inspector.
Pavel Feldman
Reported 2010-10-29 13:37:57 PDT
When I open inspector on a clean ToT build, I see no panels selected at all. It probably regressed once migrated to local store settings. I'll provide a patch with the fix.
Attachments
[PATCH] Proposed fix. (8.51 KB, patch)
2010-10-29 13:53 PDT, Pavel Feldman
no flags
Pavel Feldman
Comment 1 2010-10-29 13:53:32 PDT
Created attachment 72386 [details] [PATCH] Proposed fix.
WebKit Commit Bot
Comment 2 2010-10-29 14:28:25 PDT
Comment on attachment 72386 [details] [PATCH] Proposed fix. Clearing flags on attachment: 72386 Committed r70929: <http://trac.webkit.org/changeset/70929>
WebKit Commit Bot
Comment 3 2010-10-29 14:28:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.