2010-10-29  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: last active panel is not restored upon opening inspector.
        https://bugs.webkit.org/show_bug.cgi?id=48668

        * inspector/Inspector.idl:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        (WebCore::InspectorController::inspect):
        (WebCore::InspectorController::showPanel):
        (WebCore::InspectorController::disconnectFrontend):
        (WebCore::InspectorController::populateScriptObjects):
        * inspector/InspectorController.h:
        * inspector/InspectorState.cpp:
        (WebCore::InspectorState::InspectorState):
        * inspector/front-end/Settings.js:
        (WebInspector.Settings):
        * inspector/front-end/inspector.js:
        (WebInspector.set currentPanel):
        (WebInspector.doLoadedDone.onPopulateScriptObjects):
        (WebInspector.doLoadedDone):
        (WebInspector.documentClick.followLink):
        (WebInspector.documentClick):

Canonical link: https://commits.webkit.org/61433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70929 268f45cc-cd09-0410-ab3c-d52691b4dbfc