WebCore/inspector/InspectorState.cpp
@@ -46,7 +46,6 @@ InspectorState::InspectorState(InspectorClient* client)
     registerBoolean(searchingForNode, false, "searchingForNodeEnabled", (const char*)0);
     registerBoolean(profilerAlwaysEnabled, false, (const char*)0, "profilerEnabled");
     registerBoolean(debuggerAlwaysEnabled, false, (const char*)0, "debuggerEnabled");
-    registerString(lastActivePanel, InspectorController::LastActivePanel, (const char*)0, "lastActivePanel");
     registerBoolean(inspectorStartsAttached, true, (const char*)0, "InspectorStartsAttached");
     registerLong(inspectorAttachedHeight, InspectorController::defaultAttachedHeight, (const char*)0, "inspectorAttachedHeight");
     registerLong(pauseOnExceptionsState, 0, "pauseOnExceptionsState", (const char*)0);
